@@ -1,7 +1,7 @@
 Package: mi
-Version: 0.02-01
-Date: 2008-10-6
-Title: mi Package
+Version: 0.02-02
+Date: 2008-10-7
+Title: Missing Data Imputation and Model Checking
 Author: 
   Andrew Gelman <gelman@stat.columbia.edu>,
   Jennifer Hill <jh1030@columbia.edu>,
@@ -13,4 +13,4 @@ Depends: methods, MASS, nnet, arm, R2WinBUGS
 Description: Missing-data imputation and model checking
 URL: http://www.stat.columbia.edu/~gelman/
 License: GPL (>=2)
-Packaged: Mon Oct  6 09:37:50 2008; SUYS
+Packaged: Tue Oct  7 12:47:26 2008; SUYS
