@@ -22,15 +22,6 @@ if ( !isGeneric( "converged" )) {
 
 
 
-#if ( !isGeneric( "coef" )) {
-#  setGeneric( "coef",
-#              function (object, ...) {
-#                standardGeneric( "coef" )
-#              } 
-#  )
-#}
-
-
 if ( !isGeneric( "data.mi" )) {
   setGeneric( "data.mi",
               function( object ){
@@ -39,15 +30,6 @@ if ( !isGeneric( "data.mi" )) {
   )
 }
 
-
-
-#if ( !isGeneric( "fitted" )) {
-#  setGeneric( "fitted",
-#              function (object, ...) {
-#                standardGeneric( "fitted" )
-#              } 
-#  )
-#}
 
 
 if ( !isGeneric( "m" )) {
@@ -137,16 +119,6 @@ if ( !isGeneric("mi.hist")) {
                }
     )
 }
-
-
-
-#if ( !isGeneric( "resid" )) {
-#  setGeneric( "resid",
-#              function (object, ...) {
-#                standardGeneric( "resid" )
-#              } 
-#  )
-#}
 
 
 
